--- a/4-module/1-task/index.html
+++ b/4-module/1-task/index.html
@@ -22,7 +22,7 @@
         }
       ];
 
-      document.body.appendChild(makeFriendsList(friends));
+      document.body.appendChild(makeFriendsList(friends)); // метод appendChild добавляет в body результат функции
     </script>
   </body>
 </html>
